<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/login_gradient">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="69dp"
            android:src="@drawable/umbrella_logo"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/coffee"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_get_cover"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title">

            <TextView
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/username_header"/>

            <EditText
                android:id="@+id/username_field"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="username"
                android:hint="@string/username_hint"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_alignBaseline="@id/username_title"
                android:layout_toRightOf="@id/username_title"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/password_header"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:textColorHint="@color/white"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_alignBaseline="@id/password_title"
                android:layout_toEndOf="@id/password_title"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/email_header"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:layout_toEndOf="@id/email_title"
                android:layout_alignBaseline="@+id/email_title"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_layout">

            <Button
                android:id="@+id/register_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>