<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_gradient">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="69dp"
            android:src="@drawable/umbrella_logo"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/umbrella"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_protect_you_like_an_umbrella"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/username_hint"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:autofillHints="username"
            android:layout_below="@id/title"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_below="@id/username_field"/>

        <RelativeLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password_field">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:onClick="onClickButton"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:layout_toRightOf="@+id/register_button"
                android:layout_alignBaseline="@id/register_button"
                android:onClick="onClickButton"/>

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/reset_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Database"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:onClick="onClickButton"/>

</RelativeLayout>